Bug 239201. Anonymous views (views without frames) should inherit their visibility from their parent. Then visibility:hidden IFRAMEs will hide their widgets. r+sr=dbaron